# hawktracer

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  NEWS  README.md  appveyor.yml  index.ts  package.json  tsconfig.json
anomaly/: CMakeLists.txt  config.cpp  config.hpp  graphs.cpp  graphs.hpp  json_trees_file_loader.cpp  json_trees_file_loader.hpp  main.cpp  ordered_tree_editing_distance.cpp  ordered_tree_editing_distance.hpp  pattern_matching.cpp  pattern_matching.hpp  patterns.cpp  patterns.hpp  source.cpp  source.hpp  tree_file_loader.cpp  tree_file_loader.hpp
benchmarks/: CMakeLists.txt  benchmark_event_db.cpp  benchmark_feature_cached_string.cpp  benchmark_hash_map.cpp  benchmark_main.cpp  benchmark_timeline.cpp
bindings/nodejs/: CMakeLists.txt  client_context.cpp  client_context.hpp  hawktracer_client_nodejs.cpp  hawktracer_client_nodejs.hpp
bindings/python3/: CMakeLists.txt  client_context.cpp  client_context.hpp  example-client.py  hawktracer_client_python.cpp  hawktracer_core_python.cpp  hawktracer_python.cpp  instrumentation-advanced-example.py  instrumentation-base-example.py  lognplot-adapter.py  plot-events.py  setup.py.in
client/: ArgParser.cs  BufferPool.cs  CMakeLists.txt  ChromeTracingOutput.cs  DataProvider.cs  DataStructures.cs  EventKlassRegistry.cs  LabelMapper.cs  Program.cs  SourceStreamFactory.cs  TypeHelper.cs  call_graph.cpp  call_graph.hpp  callgrind_converter.cpp  callgrind_converter.hpp  callgrind_listener.cpp  callgrind_listener.hpp  chrome_trace_converter.cpp  chrome_trace_converter.hpp  chrome_tracing_listener.cpp  chrome_tracing_listener.hpp  converter.cpp  converter.hpp  hawktracer-client.csproj  hawktracer-client.sln  hawktracer-client.userprefs  iconverter.cpp  iconverter.hpp  label_mapping.hpp  main.cpp  tcp_client_stream.cpp  tcp_client_stream.hpp  tracepoint_map.cpp  tracepoint_map.hpp
client/Properties/: AssemblyInfo.cs
client/parser/: CMakeLists.txt  debug_event_listener.cpp  debug_event_listener.hpp  event.cpp  event.hpp  file_stream.cpp  file_stream.hpp  klass_register.cpp  klass_register.hpp  make_unique.hpp  protocol_reader.cpp  protocol_reader.hpp
client_utils/: CMakeLists.txt  command_line_parser.cpp  converter.cpp  stream_factory.cpp  tcp_client_stream.cpp  tracepoint_map.cpp
examples/: CMakeLists.txt  example_simple_callstack.cpp
examples/nodejs-client/: index.js  package.json  test.htdump
examples/tutorials/: CMakeLists.txt
lib/: CMakeLists.txt  alloc.c  bag.c  base_timeline.cpp  callstack_base_timeline.c  callstack_base_timeline.cpp  callstack_timeline.c  command_line_parser.c  event_id_provider.cpp  event_utils.c  events.c  feature_cached_string.c  feature_cached_string.cpp  feature_callstack.c  feature_duration.c  global_callstack_timeline.cpp  global_timeline.cpp  hash_map.c  init.c  listener_buffer.c  monotonic_clock.cpp  mutex.cpp  posix_mapped_tracepoint.c  registry.c  scoped_tracepoint.c  stack.c  system_info.c  task_scheduler.c  tcp_server.cpp  thread.c  thread.cpp  timeline.c  timeline.cpp  timeline_klass.cpp  timeline_listener.c  timeline_listener.cpp  timeline_registry.c  timeline_registry.cpp
lib/include/: hawktracer.h
lib/listeners/: file_dump_listener.c  tcp_listener.c  tcp_listener.cpp
parser/: CMakeLists.txt  debug_event_listener.cpp  event.cpp  event.hpp  event_klass.cpp  event_klass.hpp  file_stream.cpp  klass_register.cpp  klass_register.hpp  protocol_reader.cpp  protocol_reader.hpp  stream.hpp
src/hawktracer/: Action.cpp  Action.h  CMakeLists.txt  CircularBuffer.h  HRClock.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  Timeline.cpp  Timeline.h  TimelineNetworkListener.cpp  TimelineNetworkListener.h  TracepointTimeline.h  Vector.h  config.h
test/: CMakeLists.txt  CircularBufferTest.cpp  VectorTest.cpp
tests/: CMakeLists.txt  main_destroy_timeline_after_uninit.c  main_gtest_tests.cpp  test_alloc.cpp  test_bag.cpp  test_callstack_base_timeline.cpp  test_callstack_timeline.cpp  test_common.cpp  test_common.h  test_event.cpp  test_event_id_provider.cpp  test_feature_cached_string.cpp  test_feature_callstack.cpp  test_global_callstack_timeline.cpp  test_global_timeline.cpp  test_path.cpp  test_registry.cpp  test_stack.cpp  test_test_events.c  test_test_events.h  test_thread.cpp  test_timeline.cpp  test_timeline_registry.cpp
tests/anomaly/: CMakeLists.txt  main_tests.cpp  test1_config.json  test1_pattern.json  test1_pattern.txt  test1_source.json  test1_source.txt  test2_config.json  test2_source.json  test2_source.txt  test3_config.json  test3_pattern.json  test3_pattern.txt  test3_source.json  test3_source.txt  test4_config.json  test4_pattern.json  test4_pattern.txt  test4_source.json  test4_source.txt  test5_config.json  test5_pattern.json  test5_pattern.txt  test5_source.json  test5_source.txt  test_ordered_tree_editing_distance.cpp  test_path.cpp  test_pattern_matching.cpp
tests/bindings/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_3_lvls_stack_simple_calls.txt  test_call_graph.cpp  test_chrome_trace_converter.cpp  test_file_loader.cpp  test_file_loader.hpp  test_multiple_calls.txt  test_path.cpp  test_path.hpp
tests/client_utils/: CMakeLists.txt  test_command_line_parser.cpp  test_stream_factory.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
tests/lib/: CMakeLists.txt  main_destroy_timeline_after_uninit.c  main_gtest_tests.cpp  test_alloc.cpp  test_allocator.cpp  test_allocator.h  test_bag.cpp  test_command_line_parser.cpp  test_common.cpp  test_common.h  test_duration_conversion.cpp  test_event.cpp  test_event_id_provider.cpp  test_feature_cached_string.cpp  test_feature_callstack.cpp  test_hash_map.cpp  (+9 more)
tools_integration/: CMakeLists.txt  HawkTracerConfig.cmake.in  hawktracer.pc.in
viewer/: CMakeLists.txt  base_ui.cpp  base_ui.hpp  cache.cpp  cache.hpp  event_db.cpp  event_db.hpp  graph.cpp  graph.hpp  icache.hpp  javascript_ui.cpp  javascript_ui.hpp  jsonxx_utils.hpp  logger.hpp  main.cpp  protocol.txt  ui_controller.cpp  ui_controller.hpp  websocket.cpp  websocket.hpp  xy_graph.cpp  xy_graph.hpp
(+187 files in other folders)
